--- a/assignment2/assignment2.ipynb
+++ b/assignment2/assignment2.ipynb
@@ -93,14 +93,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\nmcna\\AppData\\Local\\Temp\\ipykernel_9840\\130197631.py:7: DeprecationWarning: Please use `convolve` from the `scipy.ndimage` namespace, the `scipy.ndimage.filters` namespace is deprecated.\n",
+      "C:\\Users\\nmcna\\AppData\\Local\\Temp\\ipykernel_15680\\130197631.py:7: DeprecationWarning: Please use `convolve` from the `scipy.ndimage` namespace, the `scipy.ndimage.filters` namespace is deprecated.\n",
       "  from scipy.ndimage.filters import convolve as filter2\n"
      ]
     }
@@ -178,7 +178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -190,13 +190,13 @@
     "            frame_path = os.path.join(folder_path, filename)\n",
     "            frame_paths.append(frame_path)\n",
     "    frame_paths.sort()\n",
-    "    print(frame_paths)\n",
+    "    ##print(frame_paths)\n",
     "    return frame_paths"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 17,
    "metadata": {
     "tags": [
      "Ingest"
@@ -210,10 +210,10 @@
     "    frames = []\n",
     "    if os.path.isdir(input_path):\n",
     "        frame_paths = get_frame_paths(input_path)\n",
-    "        print(f\"{frame_paths}\")\n",
+    "        #print(f\"{frame_paths}\")\n",
     "        frames = [cv2.imread(frame_path) for frame_path in frame_paths]\n",
     "    else :\n",
-    "        print(\"here\")\n",
+    "        #print(\"here\")\n",
     "        if input_path.endswith('.mp4') or input_path.endswith('.mov') :\n",
     "            cap = cv2.VideoCapture(input_path)\n",
     "            frames = []\n",
@@ -236,7 +236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -245,7 +245,7 @@
     "    with open(filename, 'r') as f:\n",
     "        config = yaml.load(f, Loader=yaml.FullLoader)\n",
     "        config['input_path']= os.getcwd()+config['input_path'] # Fix to run in the location it called\n",
-    "        print(config)\n",
+    "        #print(config)\n",
     "    return config"
    ]
   },
@@ -259,7 +259,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {
     "tags": [
      "Flow"
@@ -315,10 +315,19 @@
     "\n",
     "\n",
     "def calculate_error_statistics(error):\n",
-    "    mean_error = np.mean(angular_error)\n",
-    "    std_error = np.std(angular_error)\n",
+    "    mean_error = np.mean(error)\n",
+    "    std_error = np.std(error)\n",
     "    return mean_error, std_error\n",
     "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# Example usage\n",
     "flow_gt = read_flow_field('/workspace/VC/assignment2/dataset/other-gt-flow/Urban2/flow10.flo')\n",
     "flow_pred = read_flow_field('/workspace/VC/assignment2/dataset/other-gt-flow/Urban2/flow10.flo')\n",
@@ -328,14 +337,14 @@
     "angular_error = calculate_angular_error(flow_gt, flow_pred)\n",
     "angular_mean, angular_std = calculate_error_statistics(angular_error)\n",
     "\n",
-    "print('Mean Angular Error:', angular_mean)\n",
-    "print('Standard Deviation of Angular Error:', angular_std)\n",
+    "#print('Mean Angular Error:', angular_mean)\n",
+    "#print('Standard Deviation of Angular Error:', angular_std)\n",
     "\n",
     "endpoint_error = calculate_endpoint_error(flow_gt, flow_pred)\n",
     "endpoint_mean, endpoint_std = calculate_error_statistics(endpoint_error)\n",
     "\n",
-    "print('Mean Endpoint Error:', endpoint_mean)\n",
-    "print('Standard Deviation of Endpoint Error:', endpoint_std)\n"
+    "#print('Mean Endpoint Error:', endpoint_mean)\n",
+    "#print('Standard Deviation of Endpoint Error:', endpoint_std)"
    ]
   },
   {
@@ -348,37 +357,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 48,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Loading File 'config_LK.yml'\n",
-      "{'input_path': 'c:\\\\Users\\\\nmcna\\\\Desktop\\\\FEUP\\\\4oano\\\\2osemestre\\\\VC\\\\assignment2\\\\dataset\\\\Forest_15_3b_Videvo.mov', 'max_corners': 100, 'quality_level': 0.3, 'min_distance': 7, 'block_size': 7, 'window_size': 15, 'max_level': 2, 'max_iterations': 10, 'epsilon': 0.03, 'ransac_threshold': 3.0}\n"
-     ]
-    },
-    {
-     "ename": "IndexError",
-     "evalue": "list index out of range",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mIndexError\u001b[0m                                Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[19], line 22\u001b[0m\n\u001b[0;32m     16\u001b[0m lk_params \u001b[39m=\u001b[39m \u001b[39mdict\u001b[39m(\n\u001b[0;32m     17\u001b[0m     winSize\u001b[39m=\u001b[39m(config[\u001b[39m'\u001b[39m\u001b[39mwindow_size\u001b[39m\u001b[39m'\u001b[39m], config[\u001b[39m'\u001b[39m\u001b[39mwindow_size\u001b[39m\u001b[39m'\u001b[39m]),\n\u001b[0;32m     18\u001b[0m     maxLevel\u001b[39m=\u001b[39mconfig[\u001b[39m'\u001b[39m\u001b[39mmax_level\u001b[39m\u001b[39m'\u001b[39m],\n\u001b[0;32m     19\u001b[0m     criteria\u001b[39m=\u001b[39m(cv2\u001b[39m.\u001b[39mTERM_CRITERIA_EPS \u001b[39m|\u001b[39m cv2\u001b[39m.\u001b[39mTERM_CRITERIA_COUNT, config[\u001b[39m'\u001b[39m\u001b[39mmax_iterations\u001b[39m\u001b[39m'\u001b[39m], config[\u001b[39m'\u001b[39m\u001b[39mepsilon\u001b[39m\u001b[39m'\u001b[39m])\n\u001b[0;32m     20\u001b[0m )\n\u001b[0;32m     21\u001b[0m color \u001b[39m=\u001b[39m np\u001b[39m.\u001b[39mrandom\u001b[39m.\u001b[39mrandint(\u001b[39m0\u001b[39m, \u001b[39m255\u001b[39m, (\u001b[39m100\u001b[39m, \u001b[39m3\u001b[39m))\n\u001b[1;32m---> 22\u001b[0m old_frame \u001b[39m=\u001b[39m frames[\u001b[39m0\u001b[39;49m]\n\u001b[0;32m     23\u001b[0m old_gray \u001b[39m=\u001b[39m cv2\u001b[39m.\u001b[39mcvtColor(old_frame, cv2\u001b[39m.\u001b[39mCOLOR_BGR2GRAY)\n\u001b[0;32m     24\u001b[0m p0 \u001b[39m=\u001b[39m cv2\u001b[39m.\u001b[39mgoodFeaturesToTrack(old_gray, mask\u001b[39m=\u001b[39m\u001b[39mNone\u001b[39;00m, \u001b[39m*\u001b[39m\u001b[39m*\u001b[39mfeature_params)\n",
-      "\u001b[1;31mIndexError\u001b[0m: list index out of range"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "print(f\"Loading File \\'config_LK.yml\\'\")\n",
+    "#print(f\"Loading File \\'config_LK.yml\\'\")\n",
     "\n",
     "config = load_config('config_LK.yml')\n",
     "\n",
     "input_path = config['input_path']\n",
     "\n",
-    "frames = get_input_frames('/Users/nmcna/Desktop/FEUP/4oano/2osemestre/VC/assignment2/dataset/Forest_15_3b_Videvo.mov')\n",
+    "frames = get_input_frames(input_path)\n",
     "\n",
     "\n",
     "feature_params = dict(\n",
@@ -400,7 +389,7 @@
     "mask = np.zeros_like(old_frame)\n",
     "height, width, channels = old_frame.shape\n",
     "mask_flow = np.zeros((height,width,2))\n",
-    "print(\"DIM: \", mask_flow.shape)\n",
+    "#print(\"DIM: \", mask_flow.shape)\n",
     "\n",
     "for frame_num in frames[1:]:\n",
     "    \n",
@@ -408,9 +397,9 @@
     "    frame_gray = cv2.cvtColor(frame_num, cv2.COLOR_BGR2GRAY)\n",
     "    \n",
     "    p1, st, err = cv2.calcOpticalFlowPyrLK(old_gray, frame_gray, p0, None, **lk_params)\n",
-    "    print(\"p1: \", np.asarray(p1).shape)\n",
-    "    print(np.asarray(p1).shape)\n",
-    "    print(p1)\n",
+    "    #print(\"p1: \", np.asarray(p1).shape)\n",
+    "    #print(np.asarray(p1).shape)\n",
+    "    #print(p1)\n",
     "    if p1 is not None:\n",
     "        \n",
     "        good_new = p1[st==1]\n",
@@ -424,28 +413,20 @@
     "    frame_with_flow = cv2.add(current_frame, mask)\n",
     "    old_gray = frame_gray.copy()\n",
     "    p0 = good_new.reshape(-1,1,2)\n",
-    "    \n",
     "\n",
-    "print(\"mask: \",mask.shape)\n",
-    "cv2.imwrite('flow.png', frame_with_flow)\n",
-    "write_flow_field(mask,'flow_field.flo')\n",
-    "\n",
-    "\n",
-    "flow_data = read_flow_field('/Users/nmcna/Desktop/FEUP/4oano/2osemestre/VC/assignment2/dataset/other-gt-flow/Urban2/flow10.flo')  # Read the .flo file\n",
-    "\n",
-    "# Compute the magnitude and angle of the flow vectors\n",
-    "magnitude, angle = cv2.cartToPolar(flow_data[..., 0], flow_data[..., 1])\n",
-    "\n",
-    "# Visualize the flow field\n",
-    "hue = angle * 180 / np.pi / 2\n",
-    "saturation = np.ones_like(magnitude)\n",
-    "value = cv2.normalize(magnitude, None, 0, 255, cv2.NORM_MINMAX)\n",
-    "flow_visualization = cv2.cvtColor(cv2.merge((hue, saturation, value)).astype(np.uint8), cv2.COLOR_HSV2BGR)\n",
-    "#teste = cv2.merge((hue, saturation, value)).astype(np.uint8)\n",
-    "# Display the flow visualization\n",
-    "cv2.imshow('Optical Flow', flow_visualization)\n",
-    "cv2.waitKey(0)\n",
-    "cv2.destroyAllWindows()"
+    "if os.path.isfile(input_path):\n",
+    "    file_name, file_extension = os.path.splitext(input_path)\n",
+    "    if file_extension.lower() not in ['.png', '.jpg']:\n",
+    "        #print(\"File name without extension:\", os.path.basename(file_name))\n",
+    "        cv2.imwrite(file_name+'_flow.png', frame_with_flow)\n",
+    "        write_flow_field(mask,file_name+'_flow_field.flo')\n",
+    "    else:\n",
+    "        print(\"The file extension is .png or .jpg\")\n",
+    "else:\n",
+    "    directory = input_path.split('dataset\\\\')[1].split('\\\\')\n",
+    "    #print(\"Directory after 'dataset\\\\':\", directory[1])\n",
+    "    cv2.imwrite(directory[1]+'_flow.png', frame_with_flow)\n",
+    "    write_flow_field(mask,directory[1]+'_flow_field.flo')"
    ]
   },
   {
@@ -481,7 +462,7 @@
    "source": [
     "def computeHS(path, name1, name2, alpha, delta):\n",
     "    \n",
-    "    print(\"Computing using: \", name1, \" and \", name2)\n",
+    "    #print(\"Computing using: \", name1, \" and \", name2)\n",
     "    beforeImg = cv2.imread(os.path.join(path, name1), cv2.IMREAD_GRAYSCALE)\n",
     "    afterImg = cv2.imread(os.path.join(path, name2), cv2.IMREAD_GRAYSCALE)\n",
     "\n",
@@ -519,7 +500,7 @@
     "        diff = np.linalg.norm(u - prev, 2)\n",
     "        #converges check (at most 300 iterations)\n",
     "        if  diff < delta or iter_counter > 300:\n",
-    "            # print(\"iteration number: \", iter_counter)\n",
+    "            # #print(\"iteration number: \", iter_counter)\n",
     "            break\n",
     "\n",
     "    draw_quiver(u, v, beforeImg)\n",
@@ -527,7 +508,7 @@
     "    return [u, v]\n",
     "\n",
     "def show_image(name, image):\n",
-    "    print(\"take this image!!!\")\n",
+    "    #print(\"take this image!!!\")\n",
     "    if image is None:\n",
     "        return\n",
     "\n",
@@ -536,7 +517,7 @@
     "    cv2.destroyAllWindows()\n",
     "    \n",
     "def get_magnitude(u, v):\n",
-    "    print(\"getting magnitude...\")\n",
+    "    #print(\"getting magnitude...\")\n",
     "    scale = 3\n",
     "    sum = 0.0\n",
     "    counter = 0.0\n",
@@ -554,7 +535,7 @@
     "    return mag_avg\n",
     "\n",
     "def draw_quiver(u,v,beforeImg):\n",
-    "    print(\"drawing...\")\n",
+    "    #print(\"drawing...\")\n",
     "    scale = 3\n",
     "    ax = plt.figure().gca()\n",
     "    ax.imshow(beforeImg, cmap = 'gray')\n",
@@ -574,7 +555,7 @@
     "    plt.show()\n",
     "    \n",
     "def get_derivatives(img1, img2):\n",
-    "    print(\"derivating...\")\n",
+    "    #print(\"derivating...\")\n",
     "    #derivative masks\n",
     "    x_kernel = np.array([[-1, 1], [-1, 1]]) * 0.25\n",
     "    y_kernel = np.array([[-1, -1], [1, 1]]) * 0.25\n",
@@ -593,7 +574,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print(f\"Loading File \\'config_HS.yml\\'\")\n",
+    "#print(f\"Loading File \\'config_HS.yml\\'\")\n",
     "\n",
     "config = load_config('config_HS.yml')\n",
     "\n",
@@ -601,99 +582,10 @@
     "\n",
     "#name = get_frame_paths(input_path)\n",
     "frames = os.listdir(input_path)\n",
-    "#print(frames)\n",
+    "##print(frames)\n",
     "for i in range(0,len(frames)-1):\n",
-    "    print(\"CYCLE: \", i)\n",
+    "    #print(\"CYCLE: \", i)\n",
     "    computeHS(input_path, frames[i], frames[i+1], alpha=15, delta=10**-1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import cv2\n",
-    "import numpy as np\n",
-    "import yaml\n",
-    "import os\n",
-    "import matplotlib.pyplot as plt\n",
-    "from IPython.display import clear_output\n",
-    "from ipywidgets import Image\n",
-    "from io import BytesIO\n",
-    "import PIL.Image\n",
-    "\n",
-    "def display_image(image):\n",
-    "    # Convert the OpenCV image to a PIL image\n",
-    "    image = cv2.cvtColor(image, cv2.COLOR_BGR2RGB)\n",
-    "    pil_image = PIL.Image.fromarray(image)\n",
-    "    \n",
-    "    # Display the image using the Jupyter inline magic\n",
-    "    buffered = BytesIO()\n",
-    "    pil_image.save(buffered, format=\"JPEG\")\n",
-    "    display(Image(data=buffered.getvalue()))\n",
-    "\n",
-    "\n",
-    "# Load the tuning parameters from the config file\n",
-    "with open('config_HS.yml', 'r') as f:\n",
-    "    config = yaml.safe_load(f)\n",
-    "\n",
-    "# Load the input frames\n",
-    "input_path = os.getcwd()+config['input_path']\n",
-    "input_frames = get_input_frames(input_path)\n",
-    "\n",
-    "# Initialize the flow field for the first frame with zeros\n",
-    "prev_frame = input_frames[0]\n",
-    "flow = np.zeros((prev_frame.shape[0], prev_frame.shape[1], 2), dtype=np.float32)\n",
-    "\n",
-    "# Set the Horn-Schunck parameters\n",
-    "alpha = config['alpha']\n",
-    "num_iterations = config['num_iterations']\n",
-    "epsilon = config['epsilon']\n",
-    "\n",
-    "# Define the Gaussian pyramid levels\n",
-    "num_levels = config['num_levels']\n",
-    "pyramid_scale = config['pyramid_scale']\n",
-    "\n",
-    "# Create an output widget for displaying images\n",
-    "output_widget = Image()\n",
-    "\n",
-    "# Compute the optical flow for each level of the pyramid\n",
-    "for level in range(num_levels):\n",
-    "    # Downsample the input frames and flow field\n",
-    "    curr_frame = cv2.resize(prev_frame, None, fx=pyramid_scale, fy=pyramid_scale)\n",
-    "    curr_flow = cv2.resize(flow, None, fx=pyramid_scale, fy=pyramid_scale)\n",
-    "\n",
-    "    # Compute the optical flow using the multi-channel Horn-Schunck algorithm\n",
-    "    for i in range(num_iterations):\n",
-    "        # Split the flow field into x and y components\n",
-    "        fx, fy = np.split(curr_flow, 2, axis=2)\n",
-    "\n",
-    "        # Compute the Laplacian of the flow field\n",
-    "        fxx, _ = np.gradient(fx)\n",
-    "        _, fyy = np.gradient(fy)\n",
-    "        fxy = np.gradient(fx, axis=0)[0] + np.gradient(fy, axis=1)[1]\n",
-    "\n",
-    "        # Compute the temporal derivative of the flow field\n",
-    "        ft = next_frame_gray - prev_frame_gray + np.sum(curr_flow * np.dstack((fx, fy)), axis=2)\n",
-    "\n",
-    "        # Compute the update to the flow field\n",
-    "        numerator = fxx * fy ** 2 - 2 * fx * fy * fxy + fyy * fx ** 2 - ft * fx * fy\n",
-    "        denominator = fx ** 2 + fy ** 2 + alpha\n",
-    "        update = numerator / (denominator[..., np.newaxis] + epsilon)\n",
-    "\n",
-    "        # Update the flow field\n",
-    "        curr_flow += update\n",
-    "\n",
-    "        # Visualize the current flow field\n",
-    "        if display:\n",
-    "            flow_image = flow_to_color(curr_flow)\n",
-    "            display_image(flow_image)\n",
-    "\n",
-    "    # Convert the flow field to polar coordinates\n",
-    "    magnitude, angle = cv2.cartToPolar(curr_flow[..., 0], curr_flow[..., 1], angleInDegrees=True)\n",
-    "\n",
-    "    #return curr_flow, magnitude, angle"
    ]
   },
   {
@@ -726,7 +618,7 @@
     "\n",
     "import flowvid as fv\n",
     "\n",
-    "flo_data = fv.input.flo('flow_gt.flo')\n",
+    "flo_data = fv.input.flo('flow_field.flo')\n",
     "\n",
     "# You can normalize by frame OR the whole video\n",
     "# Normalize each flo file independently\n",
@@ -742,47 +634,6 @@
     "\n",
     "\n",
     "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# IMport dataset with public ground truth\n",
-    "%pip install wget\n",
-    "import os\n",
-    "import subprocess\n",
-    "import wget\n",
-    "import zipfile\n",
-    "\n",
-    "# Specify the URLs of the files to download\n",
-    "url1 = \"https://vision.middlebury.edu/flow/data/comp/zip/other-gt-flow.zip\"\n",
-    "url2 = \"https://vision.middlebury.edu/flow/data/comp/zip/other-color-allframes.zip\"\n",
-    "url3 = \"https://vision.middlebury.edu/flow/data/comp/zip/eval-color-allframes.zip\"\n",
-    "# Specify the destination folder to store the downloaded files\n",
-    "destination_folder = \"dataset/\"\n",
-    "\n",
-    "# Download the files using wget\n",
-    "file1 = wget.download(url1, out=destination_folder)\n",
-    "file2 = wget.download(url2, out=destination_folder)\n",
-    "file3 = wget.download(url3, out=destination_folder)\n",
-    "\n",
-    "# Unzip the files\n",
-    "with zipfile.ZipFile(file1, 'r') as zip_ref:\n",
-    "    zip_ref.extractall(destination_folder)\n",
-    "\n",
-    "with zipfile.ZipFile(file2, 'r') as zip_ref:\n",
-    "    zip_ref.extractall(destination_folder)\n",
-    "    \n",
-    "with zipfile.ZipFile(file3, 'r') as zip_ref:\n",
-    "    zip_ref.extractall(destination_folder)\n",
-    "\n",
-    "# Remove the zip files if needed\n",
-    "os.remove(file1)\n",
-    "os.remove(file2)\n",
-    "os.remove(file3)"
    ]
   },
   {
@@ -834,7 +685,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.1"
+   "version": "3.11.3"
   },
   "orig_nbformat": 4
  },
