--- a/assignment2/assignment2.ipynb
+++ b/assignment2/assignment2.ipynb
@@ -445,6 +445,8 @@
     "\n",
     "config = load_config('config_LK.yml')\n",
     "\n",
+    "input_path = config['input_path']\n",
+    "\n",
     "frames = get_input_frames(config['input_path'])\n",
     "\n",
     "feature_params = dict(\n",
