change write order

--- a/assignment2/assignment2.ipynb
+++ b/assignment2/assignment2.ipynb
@@ -498,7 +498,7 @@
     "    if file_extension.lower() not in ['.png', '.jpg']:\n",
     "        #print(\"File name without extension:\", os.path.basename(file_name))\n",
     "        cv2.imwrite(file_name+'_flow.png', frame_with_flow)\n",
-    "        write_flow_field(mask,file_name+'_flow_field.flo')\n",
+    "        write_flow_field(file_name+'_flow_field.flo',mask)\n",
     "    else:\n",
     "        print(\"The file extension is .png or .jpg\")\n",
     "else:\n",
