Benchmarking table template

--- a/assignment2/assignment2.ipynb
+++ b/assignment2/assignment2.ipynb
@@ -93,14 +93,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Collecting pandas\n",
+      "  Downloading pandas-2.0.1-cp311-cp311-manylinux_2_17_x86_64.manylinux2014_x86_64.whl (12.2 MB)\n",
+      "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m12.2/12.2 MB\u001b[0m \u001b[31m53.9 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m00:01\u001b[0m0:01\u001b[0m\n",
+      "\u001b[?25hRequirement already satisfied: python-dateutil>=2.8.2 in /home/gitpod/.pyenv/versions/3.11.1/lib/python3.11/site-packages (from pandas) (2.8.2)\n",
+      "Collecting pytz>=2020.1 (from pandas)\n",
+      "  Downloading pytz-2023.3-py2.py3-none-any.whl (502 kB)\n",
+      "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m502.3/502.3 kB\u001b[0m \u001b[31m58.0 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+      "\u001b[?25hCollecting tzdata>=2022.1 (from pandas)\n",
+      "  Downloading tzdata-2023.3-py2.py3-none-any.whl (341 kB)\n",
+      "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m341.8/341.8 kB\u001b[0m \u001b[31m52.8 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+      "\u001b[?25hRequirement already satisfied: numpy>=1.21.0 in /home/gitpod/.pyenv/versions/3.11.1/lib/python3.11/site-packages (from pandas) (1.24.3)\n",
+      "Requirement already satisfied: six>=1.5 in /home/gitpod/.pyenv/versions/3.11.1/lib/python3.11/site-packages (from python-dateutil>=2.8.2->pandas) (1.16.0)\n",
+      "Installing collected packages: pytz, tzdata, pandas\n",
+      "Successfully installed pandas-2.0.1 pytz-2023.3 tzdata-2023.3\n",
+      "Note: you may need to restart the kernel to use updated packages.\n"
+     ]
+    }
+   ],
+   "source": [
+    "%pip install pandas"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\nmcna\\AppData\\Local\\Temp\\ipykernel_15680\\130197631.py:7: DeprecationWarning: Please use `convolve` from the `scipy.ndimage` namespace, the `scipy.ndimage.filters` namespace is deprecated.\n",
+      "/tmp/ipykernel_27773/3957010393.py:7: DeprecationWarning: Please use `convolve` from the `scipy.ndimage` namespace, the `scipy.ndimage.filters` namespace is deprecated.\n",
       "  from scipy.ndimage.filters import convolve as filter2\n"
      ]
     }
@@ -116,6 +147,7 @@
     "import struct\n",
     "import argparse\n",
     "import math\n",
+    "from PIL import Image\n",
     "%matplotlib widget\n"
    ]
   },
@@ -129,18 +161,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Requirement already satisfied: wget in /workspace/.pyenv_mirror/user/current/lib/python3.11/site-packages (3.2)\n",
-      "Note: you may need to restart the kernel to use updated packages.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# IMport dataset with public ground truth\n",
     "%pip install wget\n",
@@ -187,7 +210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -205,7 +228,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "metadata": {
     "tags": [
      "Ingest"
@@ -245,7 +268,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -268,24 +291,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "metadata": {
     "tags": [
      "Flow"
     ]
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "\" import struct\\n\\ndef write_flow_field(flow, filename):\\n    height, width, _ = flow.shape\\n    with open(filename, 'wb') as f:\\n        # Write the magic number: 'PIEH' in ASCII\\n        f.write(b'PIEH')\\n\\n        # Write the width and height of the flow field\\n        f.write(np.array(width).astype(np.int32).tobytes())\\n        f.write(np.array(height).astype(np.int32).tobytes())\\n\\n        # Interleave the u and v values and write the flow field data\\n        flow_data = np.concatenate((flow[..., 0], flow[..., 1]), axis=1)\\n        f.write(flow_data.astype(np.float32).tobytes())\\n\\ndef read_flow_field(filename):\\n    with open(filename, 'rb') as f:\\n        # Read the magic number\\n        magic = f.read(4).decode()\\n        if magic != 'PIEH':\\n            raise ValueError('Invalid flow file format.')\\n\\n        # Read the width and height of the flow field\\n        width = np.frombuffer(f.read(4), dtype=np.int32)[0]\\n        height = np.frombuffer(f.read(4), dtype=np.int32)[0]\\n\\n        # Read the flow field data\\n        flow_data = np.frombuffer(f.read(), dtype=np.float32)\\n        flow = flow_data.reshape((height, width, 2))\\n\\n    return flow\\n \""
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "\"\"\" import struct\n",
     "\n",
@@ -324,7 +336,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -363,7 +375,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -437,7 +449,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -488,7 +500,21 @@
     "        a, b = new.ravel()\n",
     "        c, d = old.ravel()\n",
     "        mask = cv2.line(mask, (int(a), int(b)), (int(c), int(d)), color[i].tolist(), 2)\n",
-    "        \n",
+    "    \n",
+    "    # Calculate the displacement vectors\n",
+    "    flow = good_new - good_old\n",
+    "\n",
+    "    # Prepare the flow matrix\n",
+    "    flow_data = np.zeros((frame_gray.shape[0], frame_gray.shape[1], 2), dtype=np.float32)\n",
+    "    valid_indices = np.where((good_old[:, 0] >= 0) & (good_old[:, 0] < frame_gray.shape[1]) &\n",
+    "                             (good_old[:, 1] >= 0) & (good_old[:, 1] < frame_gray.shape[0]))\n",
+    "\n",
+    "    # Update flow matrix with valid keypoints and their displacement vectors\n",
+    "    valid_good_old = good_old[valid_indices].astype(int)\n",
+    "    flow_data[valid_good_old[:, 1], valid_good_old[:, 0]] = flow.squeeze()[valid_indices]\n",
+    "\n",
+    "   \n",
+    "\n",
     "    frame_with_flow = cv2.add(current_frame, mask)\n",
     "    old_gray = frame_gray.copy()\n",
     "    p0 = good_new.reshape(-1,1,2)\n",
@@ -498,7 +524,9 @@
     "    if file_extension.lower() not in ['.png', '.jpg']:\n",
     "        #print(\"File name without extension:\", os.path.basename(file_name))\n",
     "        cv2.imwrite(file_name+'_flow.png', frame_with_flow)\n",
-    "        write_flow_field(file_name+'_flow_field.flo',mask)\n",
+    "        #write_flow_field(file_name+'_flow_field.flo',mask)\n",
+    "        # Save flow data to .flo file\n",
+    "        cv2.writeOpticalFlow(file_name+'_flow_field.flo', flow_data)\n",
     "    else:\n",
     "        print(\"The file extension is .png or .jpg\")\n",
     "else:\n",
@@ -696,7 +724,7 @@
     "\n",
     "import flowvid as fv\n",
     "\n",
-    "flo_data = fv.input.flo('flow_field.flo')\n",
+    "flo_data = fv.input.flo('/workspace/VC/assignment2/dataset/slow_traffic_small_flow_field.flo')\n",
     "\n",
     "# You can normalize by frame OR the whole video\n",
     "# Normalize each flo file independently\n",
@@ -715,6 +743,43 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'/workspace/VC/assignment2/dataset/other-data/Urban2/Urban2.gif'"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def create_gif_from_folder(folder_path, duration=100, loop=0):\n",
+    "    gif_file = os.path.join(folder_path, f\"{os.path.basename(folder_path)}.gif\")\n",
+    "\n",
+    "    images = []\n",
+    "    png_files = sorted([f for f in os.listdir(folder_path) if f.endswith('.png')])\n",
+    "\n",
+    "    for file in png_files:\n",
+    "        image_path = os.path.join(folder_path, file)\n",
+    "        image = Image.open(image_path)\n",
+    "        images.append(image)\n",
+    "\n",
+    "    images[0].save(gif_file, save_all=True, append_images=images[1:], format='GIF', duration=duration, loop=loop)\n",
+    "    return gif_file\n",
+    "\n",
+    "\n",
+    "# Example usage\n",
+    "folder_path = '/workspace/VC/assignment2/dataset/other-data/Urban2'\n",
+    "create_gif_from_folder(folder_path, duration=200, loop=3)\n"
+   ]
+  },
+  {
    "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
@@ -724,26 +789,101 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Folders that have a ground truth to evaluate:['Dimetrodon', 'Venus', 'Grove3', 'Urban3', 'RubberWhale', 'Hydrangea', 'Urban2', 'Grove2']\n",
+      "          Name                                             Source Processed   \n",
+      "1   Dimetrodon  ![source](/workspace/VC/assignment2/dataset/ot...       yes  \\\n",
+      "2        Venus  ![source](/workspace/VC/assignment2/dataset/ot...       yes   \n",
+      "3       Grove3  ![source](/workspace/VC/assignment2/dataset/ot...       yes   \n",
+      "4       Urban3  ![source](/workspace/VC/assignment2/dataset/ot...       yes   \n",
+      "5  RubberWhale  ![source](/workspace/VC/assignment2/dataset/ot...       yes   \n",
+      "6    Hydrangea  ![source](/workspace/VC/assignment2/dataset/ot...       yes   \n",
+      "7       Urban2  ![source](/workspace/VC/assignment2/dataset/ot...       yes   \n",
+      "8       Grove2  ![source](/workspace/VC/assignment2/dataset/ot...       yes   \n",
+      "\n",
+      "  Average Angular Error                                  Std Angular Error   \n",
+      "1                30days  ![source](/workspace/VC/assignment2/dataset/ot...  \\\n",
+      "2                30days  ![source](/workspace/VC/assignment2/dataset/ot...   \n",
+      "3                30days  ![source](/workspace/VC/assignment2/dataset/ot...   \n",
+      "4                30days  ![source](/workspace/VC/assignment2/dataset/ot...   \n",
+      "5                30days  ![source](/workspace/VC/assignment2/dataset/ot...   \n",
+      "6                30days  ![source](/workspace/VC/assignment2/dataset/ot...   \n",
+      "7                30days  ![source](/workspace/VC/assignment2/dataset/ot...   \n",
+      "8                30days  ![source](/workspace/VC/assignment2/dataset/ot...   \n",
+      "\n",
+      "  Average Endpoint Error Std Endpoint Error  \n",
+      "1                    yes             30days  \n",
+      "2                    yes             30days  \n",
+      "3                    yes             30days  \n",
+      "4                    yes             30days  \n",
+      "5                    yes             30days  \n",
+      "6                    yes             30days  \n",
+      "7                    yes             30days  \n",
+      "8                    yes             30days  \n"
+     ]
+    },
+    {
+     "data": {
+      "text/markdown": [
+       "| Name        | Source                                                                              | Processed   | Average Angular Error   | Std Angular Error                                                                   | Average Endpoint Error   | Std Endpoint Error   |\n",
+       "|:------------|:------------------------------------------------------------------------------------|:------------|:------------------------|:------------------------------------------------------------------------------------|:-------------------------|:---------------------|\n",
+       "| Dimetrodon  | ![source](/workspace/VC/assignment2/dataset/other-data/Dimetrodon/Dimetrodon.gif)   | yes         | 30days                  | ![source](/workspace/VC/assignment2/dataset/other-data/Dimetrodon/Dimetrodon.gif)   | yes                      | 30days               |\n",
+       "| Venus       | ![source](/workspace/VC/assignment2/dataset/other-data/Venus/Venus.gif)             | yes         | 30days                  | ![source](/workspace/VC/assignment2/dataset/other-data/Venus/Venus.gif)             | yes                      | 30days               |\n",
+       "| Grove3      | ![source](/workspace/VC/assignment2/dataset/other-data/Grove3/Grove3.gif)           | yes         | 30days                  | ![source](/workspace/VC/assignment2/dataset/other-data/Grove3/Grove3.gif)           | yes                      | 30days               |\n",
+       "| Urban3      | ![source](/workspace/VC/assignment2/dataset/other-data/Urban3/Urban3.gif)           | yes         | 30days                  | ![source](/workspace/VC/assignment2/dataset/other-data/Urban3/Urban3.gif)           | yes                      | 30days               |\n",
+       "| RubberWhale | ![source](/workspace/VC/assignment2/dataset/other-data/RubberWhale/RubberWhale.gif) | yes         | 30days                  | ![source](/workspace/VC/assignment2/dataset/other-data/RubberWhale/RubberWhale.gif) | yes                      | 30days               |\n",
+       "| Hydrangea   | ![source](/workspace/VC/assignment2/dataset/other-data/Hydrangea/Hydrangea.gif)     | yes         | 30days                  | ![source](/workspace/VC/assignment2/dataset/other-data/Hydrangea/Hydrangea.gif)     | yes                      | 30days               |\n",
+       "| Urban2      | ![source](/workspace/VC/assignment2/dataset/other-data/Urban2/Urban2.gif)           | yes         | 30days                  | ![source](/workspace/VC/assignment2/dataset/other-data/Urban2/Urban2.gif)           | yes                      | 30days               |\n",
+       "| Grove2      | ![source](/workspace/VC/assignment2/dataset/other-data/Grove2/Grove2.gif)           | yes         | 30days                  | ![source](/workspace/VC/assignment2/dataset/other-data/Grove2/Grove2.gif)           | yes                      | 30days               |"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Markdown object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "import pandas as pd\n",
+    "from IPython.display import display, Markdown\n",
+    "\n",
+    "def find_common_folders(folder1, folder2):\n",
+    "    folders1 = set(os.listdir(os.getcwd()+folder1))\n",
+    "    folders2 = set(os.listdir(os.getcwd()+folder2))\n",
+    "    common_folders = list(folders1.intersection(folders2))\n",
+    "    print(f\"Folders that have a ground truth to evaluate:{common_folders}\")\n",
+    "    return common_folders\n",
+    "\n",
+    "\n",
     "\n",
     "def display_results():\n",
     "    # Create an empty dataframe to store the results\n",
-    "    results_df = pd.DataFrame(columns=['DataSet', 'Average Angular Error '])\n",
+    "\n",
+    "    paths_to_evalutate = find_common_folders('/dataset/other-data/','/dataset/other-gt-flow/')\n",
+    "\n",
+    "    results_df = pd.DataFrame(columns=['Name','Source', 'Processed', 'Average Angular Error','Std Angular Error', 'Average Endpoint Error','Std Endpoint Error'])\n",
     "    \n",
     "    # Iterate through the function calls and store the results\n",
-    "    for fc in fcalls:\n",
-    "        # Call the function\n",
-    "        result = fc()\n",
-    "        \n",
+    "    for i, path, in enumerate(paths_to_evalutate):\n",
+    "        source_path = os.getcwd()+'/dataset/other-data/'+path\n",
     "        # Add the function name and result to the dataframe\n",
-    "        results_df = results_df.append({'Function': fc.__name__, 'Result': result}, ignore_index=True)\n",
-    "    \n",
-    "    # Display the results as a markdown table\n",
-    "    display(results_df.to_markdown(index=False))"
+    "        source_gif = f\"![source]({create_gif_from_folder(source_path, duration=100, loop=3)})\"\n",
+    "\n",
+    "        results_df.loc[i+1] = [path,source_gif,'yes','30days',source_gif,'yes','30days']\n",
+    "               \n",
+    "\n",
+    "    print(results_df)\n",
+    "    #Display the results as a markdown table\n",
+    "    display(Markdown(results_df.to_markdown(index=False)))\n",
+    "\n",
+    "display_results()"
    ]
   }
  ],
@@ -763,7 +903,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.3"
+   "version": "3.11.1"
   },
   "orig_nbformat": 4
  },
